# tic_tac_toe_mcts

src/: CMakeLists.txt  main.cpp
src/game/: computer_player.cc  computer_player.h  game.cc  game.h  human_player.cc  human_player.h  player.cc  player.h
src/model/: mcts.cc  mcts.h  node.cc  node.h  tree.cc  tree.h  utils.cc  utils.h
